// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component Render the modal open with row of tags 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-tag-modal"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Tags for paul.localhost.com"
  variant="default"
>
  <PrimaryToolbar
    pagination={
      Object {
        "count": 10,
        "itemCount": 10,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
    toggleIsExpanded={[Function]}
  />
  <Table
    aria-label="paul.localhost.com tags"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "key",
          "value",
        ],
        Array [
          "thing",
          "otherthing",
        ],
      ]
    }
    variant="compact"
  >
    <Component />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={10}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={0}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Modal>
`;

exports[`TagCount component Render the modal with a child component 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-tag-modal"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Tags for paul.localhost.com"
  variant="default"
>
  <PrimaryToolbar
    pagination={
      Object {
        "count": 10,
        "itemCount": 10,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
    toggleIsExpanded={[Function]}
  />
  <h1>
    I am a child component
  </h1>
  <Table
    aria-label="paul.localhost.com tags"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "props": Object {
                "colSpan": 2,
              },
              "title": <EmptyTable>
                <Bullseye>
                  <EmptyState
                    variant="full"
                  >
                    <Title
                      headingLevel="h5"
                      size="lg"
                    >
                      No tags found
                    </Title>
                    <EmptyStateBody>
                      This filter criteria matches no tags. 
                      <br />
                       Try changing your filter settings.
                    </EmptyStateBody>
                  </EmptyState>
                </Bullseye>
              </EmptyTable>,
            },
          ],
        },
      ]
    }
    variant="compact"
  >
    <Component />
    <Component />
  </Table>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Pagination
      className=""
      defaultToFullPage={false}
      firstPage={1}
      isCompact={false}
      isDisabled={false}
      itemCount={10}
      itemsEnd={null}
      itemsStart={null}
      offset={0}
      onFirstClick={[Function]}
      onLastClick={[Function]}
      onNextClick={[Function]}
      onPageInput={[Function]}
      onPerPageSelect={[Function]}
      onPreviousClick={[Function]}
      onSetPage={[Function]}
      ouiaSafe={true}
      page={0}
      perPage={10}
      perPageOptions={
        Array [
          Object {
            "title": "10",
            "value": 10,
          },
          Object {
            "title": "20",
            "value": 20,
          },
          Object {
            "title": "50",
            "value": 50,
          },
          Object {
            "title": "100",
            "value": 100,
          },
        ]
      }
      titles={
        Object {
          "currPage": "Current page",
          "items": "",
          "itemsPerPage": "Items per page",
          "optionsToggle": "Items per page",
          "page": "",
          "paginationTitle": "Pagination",
          "perPageSuffix": "per page",
          "toFirstPage": "Go to first page",
          "toLastPage": "Go to last page",
          "toNextPage": "Go to next page",
          "toPreviousPage": "Go to previous page",
        }
      }
      toggleTemplate={[Function]}
      variant="bottom"
      widgetId="pagination-options-menu"
    />
  </TableToolbar>
</Modal>
`;
